testData/diagnostics/binding_assign.diag.txt
testData/diagnostics/binding_assign.nut line = (2) column = (0) : error: can't assign to binding 'a' (probably declaring using 'local' was intended, but 'let' was used)
let a = 2
a = 3
^

